[tool.poetry]
name = "paper-summary"
version = "0.1.0"
description = ""
authors = ["hinnytsang <mhtsangab@connect.ust.hk>"]
readme = "README.md"
packages = [{include = "paper_summary"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.2"
pypdf2 = "^3.0.1"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
